added in Ryan Mitts changes... implement bxslider.js; much better but still has flash of unstyled content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Park Cities Presbyterian Church (PCA)</title>
     <link rel="stylesheet" href="workspace/css/app.css" />
+    <link href="workspace/css/jquery.bxslider.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="workspace/webfonts/ss-social/ss-social.css" />
     <link href="http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.css" rel="stylesheet" />
 <!--[if (gte IE 6)&(lte IE 8)]>
@@ -206,119 +208,105 @@
       </header>
       <div class="container">
         <div class="row">
-          <div id="welcomeOrbit">
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+
+          <ul id="bxslider">
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/promotionsunday8-25squarenewsi-5216e3f28a970.png" alt="Promotion Sunday" />
+                </div>
+                <div class="dx-slider-column big">
                   <h4>Preschool Sunday School volunteers needed</h4>
                   <teaser mode="formatted"><p>As we enter into another year of Sunday School for our Preschoolers, we are in great need of classroom volunteers. Commit to a year of teaching our little ones by serving once-a-month or more downstairs on Sunday mornings.</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/news/#6123">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="index.html" alt="Preschool Sunday School volunteers needed" />
+              </li>
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/promotionsunday8-25squarenewsi-5216e3f28a970.png" alt="Promotion Sunday" />
                 </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+                <div class="dx-slider-column big">
                   <h4>Promotion Sunday</h4>
                   <span class="tag">Sunday, August 25</span>
                   <teaser mode="formatted"><p>Children’s Ministry begins the new calendar year, promoting all children to their new Sunday School classes. Detailed information about classrooms and teachers will be sent to parents the week before Promotion Sunday.</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/events/5703/promotion-sunday">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/promotionsunday8-25squarenewsi-5216e3f28a970.png" alt="Promotion Sunday" />
+              </li>
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/hymnsing-9-1-13squarenewsize-5216e5000455d.png" alt="Old-Fashioned Hymn Sing" />
                 </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+                <div class="dx-slider-column big">
                   <h4>Old-Fashioned Hymn Sing</h4>
                   <span class="tag">Sunday, September 1</span>
                   <teaser mode="formatted"><p>Do you love the old hymns? Then don't miss this hour as we sing hymns joyously to the Lord. Everyone is invited.</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/events/5716/old-fashioned-hymn-sing">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/hymnsing-9-1-13squarenewsize-5216e5000455d.png" alt="Old-Fashioned Hymn Sing" />
+              </li>
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/justiceandmercysyposiumsquaren-5216e48011521.png" alt="Justice &amp; Mercy Symposium" />
                 </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+                <div class="dx-slider-column big">
                   <h4>Justice &amp; Mercy Symposium</h4>
                   <span class="tag">September 6–7</span>
                   <teaser mode="formatted"><p>A biblical discussion of sex trafficking and domestic violence, prison outreach, race reconciliation, and neighborhood restoration and an Eyes-On bus tour the next day</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/events/5705/justice-and-mercy-symposium">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/justiceandmercysyposiumsquaren-5216e48011521.png" alt="Justice &amp; Mercy Symposium" />
+              </li>
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/helpinghandssquarenewsize-5216e557225d5.png" alt="Helping Hands event" />
                 </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+                <div class="dx-slider-column big">
                   <h4>Helping Hands event</h4>
                   <span class="tag">Saturday, September 7</span>
                   <teaser mode="formatted"><p>Be the hands and feet of Jesus and join the deacons and other volunteers to help single moms, widows/ers, senior adults, and those with chronic illness by doing odd jobs around their homes. Volunteers are always welcome and appreciated!</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/events/5799/helping-hands-event">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/helpinghandssquarenewsize-5216e557225d5.png" alt="Helping Hands event" />
+              </li>
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/childrenschoirs2013newsizesqua-5216df9bea034.png" alt="Children's and Youth choirs" />
                 </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+                <div class="dx-slider-column big">
                   <h4>Children's and Youth choirs</h4>
                   <span class="tag">September 8–11</span>
                   <teaser mode="formatted"><p>All students, kindergarten through grade 12, are invited to grow in understanding more about music, singing, and worship by participating in a choir this fall. First rehearsals are <strong>Sunday, September 8</strong> (high school) and <strong>Wednesday, September 11</strong> (grades K-8). Preregistration required for K-1 due to limited enrollment.</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/events/5711/childrens-and-youth-choirs">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/childrenschoirs2013newsizesqua-5216df9bea034.png" alt="Children's and Youth choirs" />
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
-                  <h4>PCPC Women's Fall Premiere</h4>
-                  <span class="tag">Wednesday, September 11</span>
-                  <teaser mode="formatted"><p>Don't miss our second annual gathering at the Angelika Theater! We will be looking at what it means to put aside our fears and rest steadily on the solid foundation of Christ. Tickets are $10. </p>
-</teaser>
-                  <a class="button" href="http://pcpc.site/events/5706/pcpc-womens-fall-premiere">Details</a>
-                </div>
-                <div class="orbit-slide-column small">
+              </li>
+              <li>
+                <div class="dx-slider-column small">
                   <img src="image/2/340/340/5/0/uploads/images/events/box-images/womens-premiere-fall13square-n-521708ad2bcc0.png" alt="PCPC Women's Fall Premiere" />
                 </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="orbit-slide-text">
-                <div class="orbit-slide-column big">
+                <div class="dx-slider-column big">
+                  <h4>PCPC Women's Fall Premiere</h4>
+                  <span class="tag">Wednesday, September 11</span>
+                  <teaser mode="formatted"><p>Don't miss our second annual gathering at the Angelika Theater! We will be looking at what it means to put aside our fears and rest steadily on the solid foundation of Christ. Tickets are $10. </p>
+                  </teaser>
+                  <a class="button" href="http://pcpc.site/events/5706/pcpc-womens-fall-premiere">Details</a>
+                </div>
+              </li>
+              <li>
+                <div class="dx-slider-column small">
+                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/union-new-square-5216e3043592c.jpg" alt="Union" />
+                </div>
+                <div class="dx-slider-column big">
                   <h4>Union</h4>
                   <span class="tag">September 12–October 30</span>
                   <teaser mode="formatted"><p>Marriage is a union, not simply two people making a life commitment to each other, but more importantly, it is a couple making a covenant before a holy God who binds the union together. Because our goal at PCPC is not just to perform your wedding ceremony but to guide you into a marriage as God intended it, we encourage you to enroll in either the fall or spring Union course. <em>Special note:</em> The fall class begins <strong>Thursday, September 12</strong>, but will meet <strong>Wednesday</strong> nights subsequently.</p>
-</teaser>
+                  </teaser>
                   <a class="button" href="http://pcpc.site/events/5715/union">Details</a>
                 </div>
-                <div class="orbit-slide-column small">
-                  <img src="image/2/340/340/5/0/uploads/images/events/box-images/union-new-square-5216e3043592c.jpg" alt="Union" />
-                </div>
-              </div>
-            </div>
-          </div>
+              </li>
+          </ul>
+
         </div>
       </div>
     </section>
@@ -498,7 +486,7 @@
     </footer>
     <script src="workspace/js/foundation/jquery.js"></script>
     <script src="workspace/js/foundation/jquery.foundation.topbar.js"></script>
-    <script src="workspace/js/foundation/jquery.foundation.orbit.js"></script>
+    <script src="workspace/js/jquery.bxslider.min.js"></script>
     <script src="workspace/js/foundation/jquery.offcanvas.js"></script>
     <script src="workspace/js/mediaelement/build/mediaelement-and-player.min.js"></script>
     <script src="workspace/js/app.js"></script>
