Moved Ryan's updated files to index2.html and app-previous.js; then added display to the bxslider ul and added jquery .show() to bxslider() in app.js, that fixes the 'Flash of unstyled content'

--- a/index2.html
+++ b/index2.html
@@ -209,7 +209,7 @@
       <div class="container">
         <div class="row">
 
-          <ul id="bxslider" style="display:none;">
+          <ul id="bxslider">
               <li>
                 <div class="dx-slider-column small">
                   <img src="image/2/340/340/5/0/uploads/images/events/box-images/promotionsunday8-25squarenewsi-5216e3f28a970.png" alt="Promotion Sunday" />
@@ -489,7 +489,7 @@
     <script src="workspace/js/jquery.bxslider.min.js"></script>
     <script src="workspace/js/foundation/jquery.offcanvas.js"></script>
     <script src="workspace/js/mediaelement/build/mediaelement-and-player.min.js"></script>
-    <script src="workspace/js/app.js"></script>
+    <script src="workspace/js/app-previous.js"></script>
     <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', '']);
